c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_parse/extra_credit/character_const_goto.c
// You can't use a character constant as a label in a goto statement
int main(void) {
    goto 'x';
    'x';
    return 0;
}